man page translations: update Spanish

--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -2064,15 +2064,13 @@ msgstr "Para las sub-etiquetas de idioma extendido, primero se crea la forma can
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:582
-#, fuzzy
-#| msgid "<option>--list-stereo-modes</option>"
 msgid "<option>--stop-after-video-ends</option>"
-msgstr "<option>--list-stereo-modes</option>"
+msgstr "<option>--stop-after-video-ends</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:585
 msgid "Stops processing after the primary video track ends, discarding any remaining packets of other tracks."
-msgstr ""
+msgstr "Detiene el procesamiento una vez finalizada la pista de vídeo principal, descartando los paquetes restantes de otras pistas."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:593
