program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -964,6 +964,8 @@ msgid ""
 "  --stop-after-video-ends  Stops processing after the primary video track ends,\n"
 "                           discarding any remaining packets of other tracks.\n"
 msgstr ""
+"--stop-after-video-ends Detiene el procesamiento cuando finaliza la pista de vídeo principal,\n"
+"                          descartando cualquier paquete restante de otras pistas.\n"
 
 #: src/merge/mkvmerge.cpp:374
 #, no-c-format
@@ -3988,7 +3990,7 @@ msgstr "Analiza los flujos de bits MPEG4, pone cada fotograma (frame) en un bloq
 #: src/mkvtoolnix-gui/merge/output.cpp:251
 #, no-c-format
 msgid "Any later packets of other tracks will be discarded."
-msgstr ""
+msgstr "Se descartará cualquier paquete posterior de otras pistas."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:252
 #: src/mkvtoolnix-gui/merge/output.cpp:253
@@ -11870,9 +11872,9 @@ msgid "Stop &after all running jobs have finished"
 msgstr "Detener &después de que todas las tareas en ejecución hayan finalizado"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2281
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stop after video track ends"
-msgstr "Establecer si el vídeo es entrelazado."
+msgstr "Detener al finalizar la pista de vídeo"
 
 #: src/mkvtoolnix-gui/forms/info/job_settings_widget.h:163
 #, no-c-format
@@ -11882,7 +11884,7 @@ msgstr "Parar en el primer clúster"
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
 msgid "Stops processing after the primary video track ends."
-msgstr ""
+msgstr "Detiene el procesamiento cuando finaliza la pista de vídeo principal."
 
 #: src/common/hacks.cpp:46
 #, no-c-format
