program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -923,6 +923,8 @@ msgid ""
 "  --stop-after-video-ends  Stops processing after the primary video track ends,\n"
 "                           discarding any remaining packets of other tracks.\n"
 msgstr ""
+"  --stop-after-video-ends  Interrompe l'elaborazione al termine della traccia video principale,\n"
+"                           scartando eventuali pacchetti rimanenti di altre tracce.\n"
 
 #: src/merge/mkvmerge.cpp:374
 #, no-c-format
@@ -3919,7 +3921,7 @@ msgstr "Analizza i flussi MPEG4, poni ogni frame in un blocco matroska, usa l'ap
 #: src/mkvtoolnix-gui/merge/output.cpp:251
 #, no-c-format
 msgid "Any later packets of other tracks will be discarded."
-msgstr ""
+msgstr "Eventuali pacchetti successivi di altre tracce verranno scartati."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:252
 #: src/mkvtoolnix-gui/merge/output.cpp:253
@@ -11806,9 +11808,9 @@ msgid "Stop &after all running jobs have finished"
 msgstr "Ferm&a dopo il completamento di tutte le attività"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2281
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stop after video track ends"
-msgstr "Imposta se il video è interlacciato."
+msgstr "Interrompi al termine della traccia video"
 
 #: src/mkvtoolnix-gui/forms/info/job_settings_widget.h:163
 #, no-c-format
@@ -11818,7 +11820,7 @@ msgstr "Stop al primo cluster"
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
 msgid "Stops processing after the primary video track ends."
-msgstr ""
+msgstr "Interrompi l'elaborazione al termine della traccia video principale."
 
 #: src/common/hacks.cpp:46
 #, no-c-format
