program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -727,6 +727,8 @@ msgid ""
 "  --stop-after-video-ends  Stops processing after the primary video track ends,\n"
 "                           discarding any remaining packets of other tracks.\n"
 msgstr ""
+"  --stop-after-video-ends  Прекращает обработку после окончания основной\n"
+"видеодорожки, отбрасывая все оставшиеся пакеты других дорожек.\n"
 
 #: src/merge/mkvmerge.cpp:374
 #, no-c-format
@@ -3675,7 +3677,7 @@ msgstr "Проанализировать двоичный поток MPEG4, по
 #: src/mkvtoolnix-gui/merge/output.cpp:251
 #, no-c-format
 msgid "Any later packets of other tracks will be discarded."
-msgstr ""
+msgstr "Все последующие пакеты других дорожек будут отброшены."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:252
 #: src/mkvtoolnix-gui/merge/output.cpp:253
@@ -11571,9 +11573,9 @@ msgid "Stop &after all running jobs have finished"
 msgstr "Остановить &по выполнению текущих заданий"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2281
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stop after video track ends"
-msgstr "Установить, если видео с чересстрочной развёрткой."
+msgstr "Остановить по завершении видеодорожки"
 
 #: src/mkvtoolnix-gui/forms/info/job_settings_widget.h:163
 #, no-c-format
@@ -11583,7 +11585,7 @@ msgstr "Остановка на первом кластере"
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
 msgid "Stops processing after the primary video track ends."
-msgstr ""
+msgstr "Остановка обработки по окончании основной видеодорожки."
 
 #: src/common/hacks.cpp:46
 #, no-c-format
