--- a/doc/man/po4a/po/ru.po
+++ b/doc/man/po4a/po/ru.po
@@ -2062,7 +2062,7 @@ msgstr "<option>--stop-after-video-ends</option>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:585
 msgid "Stops processing after the primary video track ends, discarding any remaining packets of other tracks."
-msgstr "Прекращает обработку после окончания основной видеодорожки, отбрасывая все оставшиеся пакеты других дорожек."
+msgstr "Прекращает обработку по окончании основной видеодорожки, отбрасывая все оставшиеся пакеты других дорожек."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:593
