program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -7796,9 +7796,9 @@ msgid "If this option is enabled, the file title will be used as the basis for t
 msgstr "Si esta opción está habilitada, el título del archivo se usará como base para el nombre del archivo de destino si el título del archivo está establecido."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:541
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this option is enabled, the name of the directory the file is located in will be used as the basis for the destination file name."
-msgstr "Si esta opción está habilitada, el título del archivo se usará como base para el nombre del archivo de destino si el título del archivo está establecido."
+msgstr "Si esta opción está habilitada, el nombre del directorio en el que se encuentra el archivo se utilizará como base para el nombre del archivo de destino."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:394
 #, no-c-format
@@ -10937,7 +10937,7 @@ msgstr "SHA1-160"
 #: src/common/kax_info.cpp:854
 #, no-c-format
 msgid "SMPTE ST 12-1 timecodes"
-msgstr ""
+msgstr "Códigos de tiempo SMPTE ST 12-1"
 
 #: src/common/file_types.cpp:102
 #, no-c-format
@@ -14793,9 +14793,9 @@ msgid "Use the &title as the base file name if a title is set"
 msgstr "Usa el &título como base del nombre del archivo si el título está establecido"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2257
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use the input file's &directory name instead of the file name"
-msgstr "De otro modo, el nombre del archivo de destino será generado a partir de los nombres de los archivos de origen."
+msgstr "Usa el nombre del &directorio del archivo de entrada en lugar del nombre del archivo"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:562
 #, no-c-format
@@ -15810,9 +15810,9 @@ msgid "checkerboard (right first)"
 msgstr "Dámero (derecha primero)"
 
 #: src/common/kax_info.cpp:852
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "codec-specific"
-msgstr "Datos específicos de la proyección:"
+msgstr "codec-specific"
 
 #: src/common/stereo_mode.cpp:59
 #, no-c-format
