program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -7732,9 +7732,9 @@ msgid "If this option is enabled, the file title will be used as the basis for t
 msgstr "Se questa opzione è abilitata il titolo del file verrà utilizzato come base per il file di destinazione se è impostato."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:541
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this option is enabled, the name of the directory the file is located in will be used as the basis for the destination file name."
-msgstr "Se questa opzione è abilitata il titolo del file verrà utilizzato come base per il file di destinazione se è impostato."
+msgstr "Se questa opzione è abilitata, il nome della cartella in cui si trova il file verrà usato come base per il nome file destinazione."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:394
 #, no-c-format
@@ -10871,7 +10871,7 @@ msgstr "SHA1-160"
 #: src/common/kax_info.cpp:854
 #, no-c-format
 msgid "SMPTE ST 12-1 timecodes"
-msgstr ""
+msgstr "Timecode SMTPE ST-12"
 
 #: src/common/file_types.cpp:102
 #, no-c-format
@@ -14741,9 +14741,9 @@ msgid "Use the &title as the base file name if a title is set"
 msgstr "Usa il &titolo come base per il nome del file se il è impostato"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2257
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use the input file's &directory name instead of the file name"
-msgstr "Altrimenti il file di destinazione verrà derivato dai nomi dei file sorgenti."
+msgstr "Usa il nome &della cartella del file sorgente invece del nome file"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:562
 #, no-c-format
@@ -15760,9 +15760,9 @@ msgid "checkerboard (right first)"
 msgstr "scacchiera (prima destra)"
 
 #: src/common/kax_info.cpp:852
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "codec-specific"
-msgstr "Dati specifici proiezione:"
+msgstr "specifico codec"
 
 #: src/common/stereo_mode.cpp:59
 #, no-c-format
