program translations: update Chinese Simplified (China)

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7635,9 +7635,9 @@ msgid "If this option is enabled, the file title will be used as the basis for t
 msgstr "若启用本选项，且已填写文件的标题，则将以该标题为基础填充输出文件名。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:541
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this option is enabled, the name of the directory the file is located in will be used as the basis for the destination file name."
-msgstr "若启用本选项，且已填写文件的标题，则将以该标题为基础填充输出文件名。"
+msgstr "若启用本选项，文件所位于的目录名称将被用于输出文件的基础名称。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:394
 #, no-c-format
@@ -10755,7 +10755,7 @@ msgstr "SHA1-160"
 #: src/common/kax_info.cpp:854
 #, no-c-format
 msgid "SMPTE ST 12-1 timecodes"
-msgstr ""
+msgstr "SMPTE ST 12-1 时间码"
 
 #: src/common/file_types.cpp:102
 #, no-c-format
@@ -14597,9 +14597,9 @@ msgid "Use the &title as the base file name if a title is set"
 msgstr "若已设置标题，则使用标题作为文件名(&T)"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2257
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use the input file's &directory name instead of the file name"
-msgstr "否则将根据输入文件名生成输出文件名。"
+msgstr "使用输入文件的目录名称，而非文件名(&D)"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:562
 #, no-c-format
@@ -15614,9 +15614,9 @@ msgid "checkerboard (right first)"
 msgstr "棋盘 (右先)"
 
 #: src/common/kax_info.cpp:852
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "codec-specific"
-msgstr "投影特定数据:"
+msgstr "编解码器特定"
 
 #: src/common/stereo_mode.cpp:59
 #, no-c-format
