--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2023-04-08 17:35+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2022\n"
-"Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
+"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2023\n"
+"Language-Team: Catalan (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,7 +39,7 @@ msgstr "75.0.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 msgid "2023-03-26"
-msgstr ""
+msgstr "26/06/2023"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -2056,15 +2056,13 @@ msgstr "Per a la forma de les subetiquetes d'idioma estès, primer es construeix
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:582
-#, fuzzy
-#| msgid "<option>--list-stereo-modes</option>"
 msgid "<option>--stop-after-video-ends</option>"
-msgstr "<option>--list-stereo-modes</option>"
+msgstr "<option>--stop-after-video-ends</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:585
 msgid "Stops processing after the primary video track ends, discarding any remaining packets of other tracks."
-msgstr ""
+msgstr "Deixa de processar una vegada finalitzi la pista de víde principal, descartant els paquets restants d'altres pistes."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:593
@@ -3485,10 +3483,8 @@ msgstr "La sortida del format <literal>json</literal>  és una representació JS
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2149
-#, fuzzy
-#| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v17.json\"><literal>mkvmerge-identification-output-schema-v17.json</literal></ulink>"
 msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v18.json\"><literal>mkvmerge-identification-output-schema-v18.json</literal></ulink>"
-msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v17.json\"><literal>mkvmerge-identification-output-schema-v17.json</literal></ulink>"
+msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v18.json\"><literal>mkvmerge-identification-output-schema-v18.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2153
@@ -4006,39 +4002,37 @@ msgstr "L'ID «<constant>-2</constant>» de pista especial fa referència als ca
 #: doc/man/mkvmerge.xml:2700
 #: doc/man/mkvpropedit.xml:715
 msgid "Language handling"
-msgstr ""
+msgstr "Gestió de l'idioma"
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvmerge.xml:2703
 msgid "&matroska; has support for two different types of language elements: the old, deprecated \"Language\" element containing ISO 639-2 alpha 3 codes and the new \"LanguageIETF\" tags containing IETF BCP 47 language tags. All of &mkvmerge;'s options that accept a language accept a BCP 47 language tag. &mkvmerge; will derive the value for the deprecated \"Language\" element from the BCP 47 language tags wherever possible."
-msgstr ""
+msgstr "El &matroska; admet dos tipus diferents d'elements d'idioma: l'antic element «Language» obsolet que conté els codis ISO 639-2 alfa 3 i les etiquetes noves «LanguageIETF» que contenen les etiquetes d'idioma BCP 477 de la IETF. Totes les opcions del &mkvmerge; que admeten un idioma accepten una etiqueta BCP 47. Sempre que sigui possible, el &mkvmerge; derivarà el valor per a l'element «Language» obsolet des de les etiquetes d'idioma BCP 47."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvmerge.xml:2709
 msgid "When identifying a file in JSON mode, existing \"LanguageIETF\" track header elements will be output as the <literal>language_ietf</literal> track property."
-msgstr ""
+msgstr "Quan s'identifiqui un fitxer en mode JSON, els elements de capçalera de pista «LanguageIETF» existents es mostraran com la propietat de pista <literal>language_ietf</literal>."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvmerge.xml:2714
 msgid "When writing a file &mkvmerge; will always write the \"LanguageIETF\", \"ChapLanguageIETF\" and \"TagLanguageIETF\" elements (the latter two only if chapters or tags are written respectively). In addition to those elements the corresponding old elements will be written; they'll be set to the ISO 639-2 code portion of the BCP 47 language tag. For example, when the track language is set to <literal>sr-Cyrl-RS</literal> \"LanguageIETF\" will be set to <literal>sr-Cyrl-RS</literal> and the old \"Language\" element will be set to <literal>srp</literal>."
-msgstr ""
+msgstr "Quan s'escrigui un fitxer, el &mkvmerge; sempre escriurà els elements «LanguageIETF», «ChapLanguageIETF» i «TagLanguageIETF» (els dos últims només si s'escriuen capítols o etiquetes respectivament). A més d'aquests elements, s'escriuran els elements antics corresponents. S'establiran a la part del codi ISO 639-2 de l'etiqueta d'idioma BCP 47. Per exemple, quan l'idioma de la pista s'estableix a <literal>sr-Cyrl-RS</literal>, «LanguageIETF» s'establirà a <literal>sr-Cyrl-RS</literal> i l'element antic «Language» s'establirà a <literal>srp</literal>."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvmerge.xml:2722
 msgid "When reading existing files (Matroska files, XML chapter or tag files etc.) that already contain \"…LanguageIETF\" elements the existing elements will be kept. Otherwise \"…LanguageIETF\" elements will be added based on command-line options and other existing deprecated \"…Language\" elements."
-msgstr ""
+msgstr "Quan es llegeixin fitxers (fitxers Matroska, capítols XML o fitxers d'etiquetes, etc.) que ja contenen elements «...LanguageIETF», es conservaran els elements existents. En cas contrari, els elements «...LanguageIETF» s'afegiran en funció de les opcions a la línia d'ordres, així com els altres elements «...Language» obsolets existents."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvmerge.xml:2728
 msgid "The creation of the new elements can be disabled completely with the command-line option <option>--disable-language-ietf</option> which operates on all three new elements."
-msgstr ""
+msgstr "La creació d'elements nous es pot desactivar completament amb l'opció de la línia d'ordres <option>-disable-language-ietf</option>, la qual opera sobre els tres elements nous."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvmerge.xml:2733
-#, fuzzy
-#| msgid "The content is treated as if it had been passed via the <link linkend=\"mkvmerge.description.engage\"><option>--engage</option></link> option."
 msgid "You can chose the normalization method applied to extended language sub-tags with the parameter <link linkend=\"mkvmerge.description.normalize_language_ietf\"><option>--normalize-language-ietf</option></link>."
-msgstr "El contingut es tractarà com si s'hagués passat l'opció <link linkend=\"mkvmerge.description.engage\"><option>--engage</option></link>."
+msgstr "Podeu triar el mètode de normalització aplicat a les subetiquetes d'idioma estès amb el paràmetre <link linkend=\"mkvmerge.description.normalize_language_ietf\"><option>--normalize-language-ietf</option></link>."
 
 #. type: Content of: <refentry><refsect1><note><para>
 #: doc/man/mkvmerge.xml:2742
@@ -5375,27 +5369,27 @@ msgstr "Selecció mitjançant el tipus MIME de l'adjunt. D'aquesta forma el sele
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:718
 msgid "&mkvpropedit; mostly tries to do the right thing by default. Therefore changes to the <option>language</option> property will cause &mkvpropedit; to apply the same change to both the new \"LanguageIETF\" element as well as the old \"Language\" element similar to how &mkvmerge; applies the language to both elements. For example, when using <literal>mkvpropedit movie.mkv --edit track:2 --set language=zh-TW</literal> the \"LanguageIETF\" element will be set to <literal>zh-TW</literal> and the old \"Language\" element to <literal>chi</literal>."
-msgstr ""
+msgstr "El &mkvpropedit; majoritàriament tracta de fer el correcte de manera predeterminada. Per tant, els canvis a la propietat <option>language</option> faran que el &mkvpropedit; apliqui el mateix canvi tant a l'element nou «LanguageIETF» com a l'element antic «Language» de manera similar a com el &mkvmerge; aplica l'idioma a ambdós elements. Per exemple, quan utilitzeu <literal>mkvpropedit peli.mkv --edit track:2 --set language=zh-TW</literal>, l'element «LanguageIETF» s'establirà a <literal>zh-TW</literal> i l'element antic «Language» a <literal>chi</literal>."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:726
 msgid "Additionally there's a new track header property named <option>language-ietf</option> that can be set or removed. Changes to this property only apply to the new \"LanguageIETF\" track header element. A caveat is that the old \"Language\" track header element is a mandatory element in Matroska — meaning even if it isn't present in the file it still has an implied value. When the user only sets the <option>language-ietf</option> property but not the <option>language</option> property, &mkvpropedit; will therefore add the old \"Language\" element in certain cases &amp; set it to <literal>und</literal> (meaning \"undetermined\") as the user didn't specify a value for it."
-msgstr ""
+msgstr "A més, hi ha una propietat nova de capçalera de pista anomenada <option>language-ietf</option> que es pot establir o eliminar. Els canvis en aquesta propietat només s'aplicaran a l'element nou de capçalera de pista «LanguageIETF». Un avís  és que l'element antic de capçalera de pista «Language» és un element obligatori a Matroska -el qual significa que fins i tot si no és present en el fitxer, encara tindrà un valor implícit-. Quan l'usuari només estableix la propietat <option>language-ietf</option>, però no la propietat <option>language</option>, per tant, el &mkvpropedit; afegirà l'element antic «Language» en certs casos i l'establirà a <literal>und</literal> (significa «indeterminat») ja que l'usuari no ha especificat un valor."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:734
 msgid "When reading XML chapter or tag files &mkvpropedit; works like &mkvmerge; does."
-msgstr ""
+msgstr "Quan es llegeixen capítols XML o fitxers d'etiquetes, el &mkvpropedit; funcionarà com ho fa el &mkvmerge;."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:736
 msgid "The creation of the new elements can be disabled completely with the command-line option `--disable-language-ietf` which operates on all three new elements."
-msgstr ""
+msgstr "La creació d'elements nous es pot desactivar completament amb l'opció de la línia d'ordres «--disable-language-ietf», la qual opera sobre els tres elements nous."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:739
 msgid "You can chose the normalization method applied to extended language sub-tags with the parameter <option>--normalize-language-ietf</option>."
-msgstr ""
+msgstr "Podeu triar el mètode de normalització aplicat a les subetiquetes d'idioma estès amb el paràmetre <option>--normalize-language-ietf</option>."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:746
